@@ -12,14 +12,32 @@ import java.io.IOException;
  * @author khamx
  */
 public class allTools {
-    public static void clearscreen(){
+    public void clearscreen(){
         
-    try {
-        if (System.getProperty("os.name").contains("Window"))
-            new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-        else
-            Runtime.getRuntime().exec("clear");
-        
-    }catch(IOException | InterruptedException ex ) {}
+        try 
+        {
+            if (System.getProperty("os.name").contains("Window"))
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            else
+                Runtime.getRuntime().exec("clear");
+
+        }
+        catch(IOException | InterruptedException ex ) 
+        {
+
+        }
+      
     }
+    
+    public void DisplayMainMenu()
+    {
+        System.out.println("1. Add new product");
+        System.out.println("2. Modify product details");
+        System.out.println("3. Delete product details");
+        System.out.println("4. Display product details based on product code");
+        System.out.println("5. Display product details based on product name");
+        System.out.println("6. Display inventory");
+        System.out.println("7. Exit");
+    }
+    
 }
